--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,10 +10,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    env: # <-- ✅ GLOBAL ENV FOR THE JOB
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
     services:
       postgres:
         image: postgres:15
         env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: Plmoknijb1234
           POSTGRES_DB: myappdb
@@ -59,3 +62,8 @@ jobs:
 
       - name: Push to Docker Hub
         run: docker push ${{ secrets.DOCKER_USERNAME }}/myproductionapp:latest
+
+
+
+
+
