--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.9'
 services:
   db:
     image: postgres:15
-    restart: always
+    restart: unless-stopped
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: Plmoknijb1234
@@ -14,14 +14,15 @@ services:
       - "5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres -d myappdb"]
-      interval: 5s
+      interval: 10s
       timeout: 5s
-      retries: 10
+      retries: 5
     networks:
       - app_net
 
   zookeeper:
     image: confluentinc/cp-zookeeper:7.3.0
+    restart: unless-stopped
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
     networks:
@@ -29,6 +30,7 @@ services:
 
   kafka:
     image: confluentinc/cp-kafka:7.3.0
+    restart: unless-stopped
     ports:
       - "9092:9092"
     environment:
@@ -37,6 +39,8 @@ services:
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_LOG_RETENTION_HOURS: 168
+      KAFKA_LOG_RETENTION_BYTES: 1073741824
     depends_on:
       - zookeeper
     networks:
@@ -44,6 +48,7 @@ services:
 
   web:
     build: .
+    restart: unless-stopped
     depends_on:
       db:
         condition: service_healthy
@@ -57,22 +62,26 @@ services:
       - "8000"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
     command: >
-      sh -c "sleep 5 && uvicorn MyProductionAPP.main:app --host 0.0.0.0 --port 8000 --reload"
+      sh -c "sleep 10 && uvicorn MyProductionAPP.main:app --host 0.0.0.0 --port 8000 --workers 4"
     networks:
       app_net:
         aliases:
           - fastapi_backend
 
   nginx:
-    image: nginx:latest
+    image: nginx:alpine
+    restart: unless-stopped
     ports:
       - "80:80"
+      - "443:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/logs:/var/log/nginx
     depends_on:
       - web
     networks:
@@ -83,3 +92,4 @@ volumes:
 
 networks:
   app_net:
+    driver: bridge
