--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,9 +14,9 @@ services:
       - "5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres -d myappdb"]
-      interval: 10s
+      interval: 5s
       timeout: 5s
-      retries: 5
+      retries: 10
     networks:
       - app_net
 
@@ -39,8 +39,6 @@ services:
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_LOG_RETENTION_HOURS: 168
-      KAFKA_LOG_RETENTION_BYTES: 1073741824
     depends_on:
       - zookeeper
     networks:
@@ -58,30 +56,25 @@ services:
       - .env
     volumes:
       - .:/app
-    expose:
-      - "8000"
+    ports:
+      - "8000:8000"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
+      interval: 10s
+      timeout: 5s
+      retries: 5
     command: >
-      sh -c "sleep 10 && uvicorn MyProductionAPP.main:app --host 0.0.0.0 --port 8000 --workers 4"
+      sh -c "sleep 5 && uvicorn MyProductionAPP.main:app --host 0.0.0.0 --port 8000"
     networks:
       app_net:
         aliases:
-          - fastapi_backend
+          - web
 
   nginx:
-    image: nginx:alpine
+    build: ./nginx
     restart: unless-stopped
     ports:
       - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./nginx/logs:/var/log/nginx
     depends_on:
       - web
     networks:
