--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,9 @@
-# nginx/nginx.conf
+# Rate limiting needs to be at http level
+limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
+
 upstream fastapi_backend {
     least_conn;
-    server fastapi_backend:8000 max_fails=3 fail_timeout=30s;
+    server web:8000 max_fails=3 fail_timeout=30s;
 }
 
 server {
@@ -31,10 +33,6 @@ server {
         application/atom+xml
         image/svg+xml;
 
-    # Rate limiting
-    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
-    limit_req zone=api burst=20 nodelay;
-
     # Health check endpoint
     location /health {
         proxy_pass http://fastapi_backend;
@@ -43,6 +41,9 @@ server {
 
     # Main application
     location / {
+        # Apply rate limiting here
+        limit_req zone=api burst=20 nodelay;
+        
         proxy_pass http://fastapi_backend;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
