--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,7 +3,7 @@ limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
 
 upstream fastapi_backend {
     least_conn;
-    server web:8000 max_fails=3 fail_timeout=30s;
+    server fastapi:8000 max_fails=3 fail_timeout=30s;
 }
 
 server {
